--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -8,7 +8,7 @@
 </div>
 
 <div *ngIf="filteredExercises.length > 0" class="tarjeta-rutina">
-  <h2 class="rutina-header">Rutina de Ejercicios para {{ selectedDay }}</h2>
+  <h2 class="rutina-header">Rutina dia {{ selectedDay }}</h2>
   <div class="ejercicios-container">
     <div class="ejercicio-card" *ngFor="let ejercicio of filteredExercises" [class.completed]="ejercicio.completado">
       <div class="ejercicio-header">
