--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -8,7 +8,7 @@
 </div>
 
 <div *ngIf="filteredExercises.length > 0" class="tarjeta-rutina">
-  <h2 class="rutina-header">Rutina dia {{ selectedDay }}</h2>
+  <h2 class="rutina-header">{{titleCard}}{{ selectedDay }}</h2>
   <div class="ejercicios-container">
     <div class="ejercicio-card" *ngFor="let ejercicio of filteredExercises" [class.completed]="ejercicio.completado">
       <div class="ejercicio-header">
@@ -16,8 +16,8 @@
         <i class="fas fa-info-circle" (click)="mostrarExplicacion(ejercicio.explicacion)"></i>
       </div>
       <div class="ejercicio-body" (click)="ejercicio.completado ? marcarEjercicioNoRealizado(ejercicio) : marcarEjercicioRealizado(ejercicio)">
-        <p class="detalle-item"><span>Series:</span> {{ ejercicio.series }}</p>
-        <p class="detalle-item"><span>Repeticiones:</span> {{ ejercicio.repeticiones }}</p>
+        <p class="detalle-item"><span>{{series}}</span> {{ ejercicio.series }}</p>
+        <p class="detalle-item"><span>{{repetitions}}</span> {{ ejercicio.repeticiones }}</p>
       </div>
       <i class="fa fa-check-circle" [ngClass]="{'completado': ejercicio.completado}" (click)="ejercicio.completado ? marcarEjercicioNoRealizado(ejercicio) : marcarEjercicioRealizado(ejercicio)"></i>
 
